<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:background="@color/orange_700">

        <TextView
            android:id="@+id/exerciseWorkoutNumberOfRepsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/workoutExerciseNumberOfRepsLabel"
            app:layout_constraintBottom_toBottomOf="@+id/exerciseWorkoutNumberOfReps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toEndOf="@+id/exerciseWorkoutNumberOfReps"
            app:layout_constraintTop_toTopOf="@+id/exerciseWorkoutNumberOfReps"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/exerciseWorkoutNumberOfReps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="monospace"
            android:text="@string/workoutExerciseNumberOfReps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.819"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteButton"
            app:layout_constraintVertical_bias="0.048" />

        <TextView
            android:id="@+id/workoutExerciseNumberOfSets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:fontFamily="monospace"
            android:text="@string/workoutExerciseNumberOfSets"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/workoutExerciseNumberOfSetsLabel"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/workoutExerciseWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/workoutExerciseWeight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/workoutExerciseWeightLabel"
            app:layout_constraintHorizontal_bias="0.631"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workoutExerciseNumberOfSets"
            app:layout_constraintVertical_bias="0.378" />

        <TextView
            android:id="@+id/workoutExerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/workoutExerciseName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.135" />

        <TextView
            android:id="@+id/workoutExerciseNumberOfSetsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="232dp"
            android:fontFamily="monospace"
            android:text="@string/workoutExerciseNumberOfSetsLabel"
            app:layout_constraintBottom_toBottomOf="@+id/workoutExerciseNumberOfSets"
            app:layout_constraintEnd_toStartOf="@+id/exerciseWorkoutNumberOfReps"
            app:layout_constraintTop_toTopOf="@+id/workoutExerciseNumberOfSets"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/workoutExerciseWeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="monospace"
            android:text="@string/workoutExerciseWeightUnit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/exerciseWorkoutType"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/workoutExerciseWeight"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/exerciseWorkoutType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/workoutExerciseType"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exerciseWorkoutNumberOfReps"
            app:layout_constraintVertical_bias="0.425" />

        <ImageView
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.834"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.152"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <ImageView
            android:id="@+id/modifyButton"
            android:layout_width="35dp"
            android:layout_height="33dp"
            android:layout_marginStart="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/deleteButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toEndOf="@+id/deleteButton"
            app:layout_constraintTop_toTopOf="@+id/deleteButton"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/ic_menu_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>